<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <developers>
        <developer>
            <id>zeabay</id>
            <name>Zeynel Abiddin Aydar</name>
            <email>zeynelaydar@gmail.com</email>
            <url>https://zeynelaydar.com</url>
            <organization>Zeabay</organization>
            <organizationUrl>https://github.com/zeabay</organizationUrl>
            <roles>
                <role>Lead Developer</role>
                <role>Architect</role>
            </roles>
            <timezone>Europe/Istanbul</timezone>
        </developer>
    </developers>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.2</version>
        <relativePath/>
    </parent>

    <groupId>com.zeabay</groupId>
    <artifactId>zeabay-common</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>zeabay-common</name>

    <properties>
        <java.version>25</java.version>
        <spring-boot.version>4.0.2</spring-boot.version>
        <maven.compiler.release>25</maven.compiler.release>

        <springdoc.version>3.0.1</springdoc.version>
        <tsid.version>5.2.6</tsid.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <lombok.version>1.18.42</lombok.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>

        <spotless.version>3.2.1</spotless.version>
        <googlejavaformat.version>1.34.1</googlejavaformat.version>
        <spotless.skip>false</spotless.skip>
    </properties>

    <modules>
        <module>zeabay-bom</module>
        <module>zeabay-core</module>
        <module>zeabay-webflux</module>
        <module>zeabay-openapi</module>
        <module>zeabay-ops</module>
        <module>zeabay-logging</module>
        <module>zeabay-r2dbc</module>
        <module>zeabay-validation</module>
        <module>zeabay-security</module>
        <module>zeabay-kafka</module>
        <module>zeabay-outbox</module>
        <module>zeabay-inbox</module>
        <module>zeabay-keycloak</module>
        <module>zeabay-redis</module>
        <module>zeabay-s3</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.zeabay</groupId>
                <artifactId>zeabay-bom</artifactId>
                <version>${project.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.diffplug.spotless</groupId>
                    <artifactId>spotless-maven-plugin</artifactId>
                    <version>${spotless.version}</version>
                    <configuration>
                        <skip>${spotless.skip}</skip>
                        <java>
                            <googleJavaFormat>
                                <version>${googlejavaformat.version}</version>
                                <style>GOOGLE</style>
                            </googleJavaFormat>
                            <importOrder>
                                <order>java,jakarta,org,com,com.zeabay,</order>
                            </importOrder>
                            <removeUnusedImports/>
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                        </java>
                    </configuration>
                    <executions>
                        <execution>
                            <id>spotless-apply</id>
                            <phase>process-sources</phase>
                            <goals>
                                <goal>apply</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${maven.compiler.release}</release>
                    <compilerArgs>
                        <arg>-parameters</arg>
                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok-mapstruct-binding.version}</version>
                        </path>
                        <path>
                            <groupId>org.springframework.boot</groupId>
                            <artifactId>spring-boot-configuration-processor</artifactId>
                            <version>${spring-boot.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>